# my-student-tracker

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/actions/setup/: instal-uv.yaml
.github/workflows/: code-quality.yaml  deploy-sheets.yaml
src/my_student_tracker/: __main__.py  py.typed
tests/my_student_tracker/: test_init.py
