[project]
name = "my-student-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Roman", email = "35300872+monaxovdulov@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
my-student-tracker = "my_student_tracker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.7",
]
